--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "engine": "16.13.1",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "parcel src/pages/index.hbs --port 3000 --no-cache",
+    "build": "parcel build src/pages/index.hbs && node src/js/server.js"
   },
   "repository": {
     "type": "git",
@@ -14,8 +15,13 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/arklit/middle.messenger.praktikum.yandex/issues"
+  "devDependencies": {
+    "@anikin/parcel-transformer-handlebars": "^1.0.9",
+    "@parcel/transformer-sass": "^2.8.0",
+    "parcel": "^2.8.0",
+    "sass": "^1.56.1"
   },
-  "homepage": "https://github.com/arklit/middle.messenger.praktikum.yandex#readme"
+  "dependencies": {
+    "express": "^4.18.2"
+  }
 }
